tests/paczka1/fuzzy1/53986375.err
Error in line 6: tMMd A231 10,1
Error in line 11: WOohEI S83 99,8
Error in line 26: S83 A231 16,1
